Add css file and modified html files

--- a/Magic Cake.html
+++ b/Magic Cake.html
@@ -5,7 +5,7 @@
         <link type="text/css" rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body bgcolor=#E5CCF0>
         <h1>Recipes World</h1>
         <!-- add here a nav bar-->
         <ul class="nav">
@@ -15,6 +15,7 @@
 
         </ul>
         <h2>Magic Cake</h2>
+        <br>
         <p>
             Magic cake is the tastiest cake on the planet.
             Few have tried it and survived to tell how delicious it is.
@@ -25,18 +26,37 @@
         <p>
             Please take a look at our legal notes for more info.
         </p>
-        <h3>Ingredients</h3>
-        <ul>
-            <li>2 eggs</li>
-            <li>100 g of sugar</li>
-            <li>50 g of butter</li>
-            <li>300 g of flour</li>
-        </ul>
-        <h3>Directions</h3>
-        <ol>
-           <li>mix eggs, sugar, flour and butter in a large bowl</li> 
-           <li>put into the oven</li>
-           <li>eat and enjoy</li>
-        </ol>
+        <br>
+
+        <table border="2" cellspacing="5" cellpadding="10" bgcolor=#DFF0CC>
+            <tr align="center" bgcolor="white">
+                <td><b>Ingredients</b></td>
+                <td><b>Quantity</b></td>
+                <td><b>Process</b></td>
+            </tr>
+            <tr align="center" bgcolor="white">
+                <td>sugar</td>
+                <td>100 g</td>
+                <td>add it in a bowl</td>
+            </tr>
+            <tr align="center" bgcolor="white">
+                <td>eggs</td>
+                <td>2</td>
+                <td>mix them with sugar</td>
+            </tr>
+            <tr align="center" bgcolor="white">
+                <td>milk</td>
+                <td>150 ml</td>
+                <td>put it in the same bowl and continue to mix</td>
+            </tr>
+            <tr align="center" bgcolor="white">
+                <td>Flour</td>
+                <td>300 g</td>
+                <td>add it slowly</td>
+            </tr>
+        </table>
+        <br> <br>
+        <p>Now you can put all into oven for 40 minutes at 180°</p>
+        <p>Enjoy your cake</p>
     </body>
 </html>
