--- a/recipes.html
+++ b/recipes.html
@@ -13,5 +13,12 @@
             <li><a href="Magic%20Cake.html">Magic Cake</a></li>
         </ul>
         <h2>Recipes</h2>
+        <br>
+        <h3>Cakes</h3>
+        <ul>
+            <li><a href="Magic%20Cake.html">Magic Cake</a></li>
+            <li>Brownie</li>
+            <li>Chocolate Cake</li>
+        </ul>
     </body>
 </html>
