--- a/suggests.html
+++ b/suggests.html
@@ -13,5 +13,33 @@
             <li><a href="Magic%20Cake.html">Magic Cake</a></li>
         </ul>
         <h2>Suggest</h2>
+
+        <form name="METHOD" method="GET" action="pagina.php">
+
+            <br>
+            <label for="recipe-name">Recipe-name</label>
+            <input type="text" id="recipe-name">
+            
+            <br><br>
+            <label for="ingredients">Ingredients</label>
+			<textarea id="ingredients"></textarea>
+
+            <br> <br> 
+            <label for="name">Your Name</label>
+			<input type="text" id="name">
+				
+            <br> 
+			<label for="email">Your Email</label>
+			<input type="text" id="email">
+
+            <div>
+                <br> <br> 
+				<label for="newsletter">Get Newsletter?</label>
+				<input type="checkbox" id="newsletter">
+			</div>
+            <br>
+			<input type="submit" value="Click to Submit" id="sub">
+        </form>
+
     </body>
 </html>
